--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,5 +57,9 @@
 				</array>
 			</dict>
 		</array>
+		<key>NSCameraUsageDescription</key>
+		<string>CAMERA</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>MIC</string>
 	</dict>
 </plist>
